Change image source from .jpg to .jpeg

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
       <div class="image-frame">
         <img
           id="revealImg"
-          src="reveal-blur.jpg"
+          src="reveal-blur.jpeg"
           alt="Timed reveal"
           class="blurred"
         />
